# portfolio

./: README.md
gen-ai/fiction-author-assistant/: README.md  prompts.py  pyproject.toml  requirements.txt
gen-ai/fiction-author-assistant/output/: anthropic_romcom.txt  anthropic_scifi.txt  google_romcom.txt  google_scifi.txt  openai_romcom.txt  openai_scifi.txt
gen-ai/fiction-author-assistant/src/: fiction_author_assistant.py  llm.py  utils.py
gen-ai/research-paper-writer/: README.md  download_sample_output.sh  pyproject.toml  requirements.txt  research_paper_writer.py  utils.py
gen-ai/research-paper-writer/src/: delete_threads.py  research_paper_writer.py
nlp/intent-classification/: README.md  download_data_models.sh  pyproject.toml  requirements.txt
nlp/intent-classification-llm/: README.md  download_data.sh  pyproject.toml  requirements.txt
nlp/intent-classification-llm/src/: 1_intent_classification_llm.ipynb  1_intent_classification_llm.py  2_intent_classification_llm_eval.ipynb  2_intent_classification_llm_eval.py  3_intent_classification_llm_full_results.ipynb  3_intent_classification_llm_full_results.py  llm.py  prompts.py  utils.py
nlp/intent-classification/src/: 1_intent_classification_eda.ipynb  1_intent_classification_eda.py  2_intent_classification_data_augmentation.ipynb  2_intent_classification_data_augmentation.py  3_intent_classification_linguistic_analysis.ipynb  3_intent_classification_linguistic_analysis.py  4_intent_classification_data_prep.ipynb  4_intent_classification_data_prep.py  5_intent_classification_modeling.ipynb  5_intent_classification_modeling.py  6_intent_classification_error_analysis.ipynb  6_intent_classification_error_analysis.py  utils.py
rag/docs-chat/: README.md  pyproject.toml  requirements.txt
rag/docs-chat/src/: db.py  main.py  utils.py
rag/docs-chat/src/static/css/: chat.css  documents.css  history.css  main.css  settings.css
rag/docs-chat/src/static/js/: chat.js  documents.js  history.js  main.js  settings.js
rag/docs-chat/src/static/materialize-v2.0.1-alpha/: README.md
rag/docs-chat/src/templates/: base.html  chat.html  chat_table.html  doc_table.html  documents.html  history.html  history_table.html  index.html  settings.html  table.html
rag/tech-manual-rag/: README.md  docker-compose.yml  download_data.sh  pyproject.toml  requirements.txt
rag/tech-manual-rag/src/: 1_eda.ipynb  1_eda.py  2_data_prep.ipynb  2_data_prep.py  3_evaluation.ipynb  3_evaluation.py  4_analysis.ipynb  4_analysis.py  es.py  goog.py  rag.py  text.py  utils.py
rag/tech-manual-rag/src/.ipynb_checkpoints/: 4_analysis-checkpoint.ipynb
system-design/: README.md
