[project]
name = "docs-chat"
version = "1.0.0"
description = "docs-chat"
authors = [
  {name = "Jason Brazeal", email = "dev@jasonbrazeal.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.19",
    "chromadb>=0.6.3",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-text-splitters>=0.3.8",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "pypdf>=5.4.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.9.0",
    "transformers>=4.50.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "jupyterlab>=4.3.6",
    "jupytext>=1.16.7",
    "mypy>=1.15.0",
]

[project.urls]
"Author Homepage" = "https://jasonbrazeal.com"

[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.ruff]
line-length = 99
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
package = false
python-downloads = "manual"
python-preference = "only-system" # don't download new python versions
compile-bytecode = true

[tool.uv.pip]
generate-hashes = true
output-file = "requirements.txt"
